[package]
name = "qook"
version = "0.1.0"
license = "MIT License"
license-file = "LICENSE"
description = "qook - Pure Rust unitaryfund/qrack Wrapper"
documentation = "https://pyqrack.readthedocs.io/en/latest/"
readme = "README.md"
homepage = "https://github.com/unitaryfund/qook"
repository = "https://github.com/unitaryfund/qook"
keywords = ["quantum", "qrack", "gpu", "hpc", "c++"]
categories = ["api-bindings", "emulators", "science", "simulation"]
links = "qrack_invoke"
build = "src/build.rs"

[build-dependencies]
bindgen = "0.53.1"

[lib]
name = "qook"          # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = false           # Is tested by default.
doctest = false        # Documentation examples are tested by default.
bench = false          # Is benchmarked by default.
doc = false            # Is documented by default.
crate-type = ["lib"]   # The crate types to generate.
